--- a/scss/uncompiled_scss/_globals.scss
+++ b/scss/uncompiled_scss/_globals.scss
@@ -117,6 +117,10 @@ h4 {
     h3 {
         color: $white;
     }
+
+    @include breakpoint-down(medium) {
+        padding: 5.125rem 1rem 5.125rem 1rem;
+    }
 }
 
 .container:not(:last-of-type) {
