--- a/scss/uncompiled_scss/_header.scss
+++ b/scss/uncompiled_scss/_header.scss
@@ -111,5 +111,6 @@
 
     @include breakpoint-down(medium) {
         width: 100%;
+        padding: 0 1rem;
     }
 }
